[gd_scene load_steps=6 format=3 uid="uid://dm2rusirlvueb"]

[ext_resource type="Script" path="res://scripts/bombs/Bomb_02/bomb_02_overworld.gd" id="1_fhk1v"]
[ext_resource type="Shader" path="res://shaders/outline.gdshader" id="2_0utiq"]
[ext_resource type="Texture2D" uid="uid://dem8ko1ggf3t7" path="res://assets/bombs/Bomb_02/Bomb_02_overworld.png" id="3_pv1ec"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vv0dx"]
shader = ExtResource("2_0utiq")
shader_parameter/line_color = Color(1, 1, 1, 1)
shader_parameter/line_thickness = 1.0
shader_parameter/hasOutline = false

[sub_resource type="CircleShape2D" id="CircleShape2D_vh8xv"]
radius = 71.0282

[node name="Bomb02Overworld" type="Node2D"]
script = ExtResource("1_fhk1v")

[node name="Bomb02Overworld" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_vv0dx")
position = Vector2(-3, -33)
texture = ExtResource("3_pv1ec")

[node name="interaction_area" type="Area2D" parent="."]
position = Vector2(-3, -33)

[node name="CollisionShape2D" type="CollisionShape2D" parent="interaction_area"]
position = Vector2(6, 0)
shape = SubResource("CircleShape2D_vh8xv")

[connection signal="body_entered" from="interaction_area" to="." method="_on_interaction_area_body_entered"]
[connection signal="body_exited" from="interaction_area" to="." method="_on_interaction_area_body_exited"]
